[autofill] Make form_structure_browsertest.cc use embedded_test_server.

The data driven tests in form_structure_browsertes.cc were navigating to
test pages using data URLs. These have no way to generate relative URLs
for form actions, so the output was being generated incorrectly for
forms that would be evaluated as !ShouldBeParsed due to having "search"
actions.

This CL uses the embedded test server to serve the test pages instead.

Bug: 789944
Change-Id: I9bdb6fa376dba070195d125807fb5e4b5443a203