chrome/browser/autofill/form_structure_browsertest.cc
@@ -5,6 +5,7 @@
 #include <algorithm>
 #include <vector>
 
+#include "base/bind.h"
 #include "base/command_line.h"
 #include "base/feature_list.h"
 #include "base/files/file_enumerator.h"
@@ -28,6 +29,10 @@
 #include "components/autofill/core/browser/form_structure.h"
 #include "components/autofill/core/common/autofill_features.h"
 #include "content/public/common/content_switches.h"
+#include "net/http/http_status_code.h"
+#include "net/test/embedded_test_server/embedded_test_server.h"
+#include "net/test/embedded_test_server/http_request.h"
+#include "net/test/embedded_test_server/http_response.h"
 #include "url/gurl.h"
 
 #if defined(OS_MACOSX)
@@ -37,21 +42,15 @@
 namespace autofill {
 namespace {
 
+using net::test_server::BasicHttpResponse;
+using net::test_server::HttpRequest;
+using net::test_server::HttpResponse;
+
 const base::FilePath::CharType kTestName[] = FILE_PATH_LITERAL("heuristics");
 
-// Convert the |html| snippet to a data URI.
-GURL HTMLToDataURI(const std::string& html) {
-  // GURL requires data URLs to be UTF-8 and will fail below if it's not.
-  CHECK(base::IsStringUTF8(html)) << "Input file is not UTF-8.";
-
-  // Strip `\n`, `\t`, `\r` from |html| to match old `data:` URL behavior.
-  std::string stripped_html;
-  for (const auto& character : html) {
-    if (character == '\n' || character == '\t' || character == '\r')
-      continue;
-    stripped_html.push_back(character);
-  }
-  return GURL(std::string("data:text/html;charset=utf-8,") + stripped_html);
+const std::set<base::FilePath::StringType>& GetFailingTestNames() {
+  static auto* failing_test_names = new std::set<base::FilePath::StringType>{};
+  return *failing_test_names;
 }
 
 const base::FilePath& GetTestDataDir() {
@@ -65,16 +64,17 @@ const base::FilePath& GetTestDataDir() {
   return dir;
 }
 
-const std::vector<base::FilePath> GetTestFiles() {
-  base::FilePath dir;
-  CHECK(PathService::Get(base::DIR_SOURCE_ROOT, &dir));
-  dir = dir.AppendASCII("components")
-            .AppendASCII("test")
-            .AppendASCII("data")
-            .AppendASCII("autofill")
-            .Append(kTestName)
-            .AppendASCII("input");
-  base::FileEnumerator input_files(dir, false, base::FileEnumerator::FILES);
+const base::FilePath GetInputDir() {
+  static base::FilePath input_dir = GetTestDataDir()
+                                        .AppendASCII("autofill")
+                                        .Append(kTestName)
+                                        .AppendASCII("input");
+  return input_dir;
+}
+
+std::vector<base::FilePath> GetTestFiles() {
+  base::FileEnumerator input_files(GetInputDir(), false,
+                                   base::FileEnumerator::FILES);
   std::vector<base::FilePath> files;
   for (base::FilePath input_file = input_files.Next(); !input_file.empty();
        input_file = input_files.Next()) {
@@ -89,14 +89,20 @@ const std::vector<base::FilePath> GetTestFiles() {
   return files;
 }
 
-const std::set<base::FilePath::StringType>& GetFailingTestNames() {
-  // TODO(crbug.com/789944): Reenable these tests.
-  static std::set<base::FilePath::StringType>* failing_test_names =
-      new std::set<base::FilePath::StringType>{
-          FILE_PATH_LITERAL("067_register_rei.com.html"),
-          FILE_PATH_LITERAL("074_register_threadless.com.html"),
-      };
-  return *failing_test_names;
+std::string FormStructuresToString(
+    const std::vector<std::unique_ptr<FormStructure>>& forms) {
+  std::string forms_string;
+  for (const auto& form : forms) {
+    for (const auto& field : *form) {
+      forms_string += field->Type().ToString();
+      forms_string += " | " + base::UTF16ToUTF8(field->name);
+      forms_string += " | " + base::UTF16ToUTF8(field->label);
+      forms_string += " | " + base::UTF16ToUTF8(field->value);
+      forms_string += " | " + field->section();
+      forms_string += "\n";
+    }
+  }
+  return forms_string;
 }
 
 }  // namespace
@@ -113,21 +119,24 @@ class FormStructureBrowserTest
   ~FormStructureBrowserTest() override;
 
   // InProcessBrowserTest
-  void SetUpCommandLine(base::CommandLine* command_line) override {
-    // Suppress most output logs because we can't really control the output for
-    // arbitrary test sites.
-    command_line->AppendSwitchASCII(switches::kLoggingLevel, "2");
-  }
+  void SetUpCommandLine(base::CommandLine* command_line) override;
+
+  // BrowserTestBase
+  void SetUpOnMainThread() override;
 
   // DataDrivenTest:
   void GenerateResults(const std::string& input, std::string* output) override;
 
-  // Serializes the given |forms| into a string.
-  std::string FormStructuresToString(
-      const std::vector<std::unique_ptr<FormStructure>>& forms);
-
  private:
+  std::unique_ptr<HttpResponse> HandleRequest(const HttpRequest& request);
+
   base::test::ScopedFeatureList feature_list_;
+
+  // The response content to be returned by the embedded test server. Note that
+  // this is populated in the main thread as a part of the setup in the
+  // GenerateResults method but it is consumed later in the IO thread by the
+  // embedded test server to generate the response.
+  std::string html_content_;
   DISALLOW_COPY_AND_ASSIGN(FormStructureBrowserTest);
 };
 
@@ -140,11 +149,42 @@ FormStructureBrowserTest::FormStructureBrowserTest()
 FormStructureBrowserTest::~FormStructureBrowserTest() {
 }
 
+void FormStructureBrowserTest::SetUpCommandLine(
+    base::CommandLine* command_line) {
+  InProcessBrowserTest::SetUpCommandLine(command_line);
+  // Suppress most output logs because we can't really control the output for
+  // arbitrary test sites.
+  command_line->AppendSwitchASCII(switches::kLoggingLevel, "2");
+}
+
+void FormStructureBrowserTest::SetUpOnMainThread() {
+  InProcessBrowserTest::SetUpOnMainThread();
+
+  embedded_test_server()->RegisterRequestHandler(base::BindRepeating(
+      &FormStructureBrowserTest::HandleRequest, base::Unretained(this)));
+  ASSERT_TRUE(embedded_test_server()->Start());
+}
+
 void FormStructureBrowserTest::GenerateResults(const std::string& input,
                                                std::string* output) {
-  ASSERT_NO_FATAL_FAILURE(ui_test_utils::NavigateToURL(browser(),
-                                                       HTMLToDataURI(input)));
+  // Cache the content to be returned by the embedded test server. This data
+  // is readonly after this point.
+  html_content_.clear();
+  html_content_.reserve(input.length());
+  for (const char c : input) {
+    // Strip `\n`, `\t`, `\r` from |html| to match old `data:` URL behavior.
+    // TODO(crbug/239819): the tests expect weird concatenation behavior based
+    //   legacy data URL behavior. Fix this so the the tests better represent
+    //   the parsing being done in the wild.
+    if (c != '\r' && c != '\n' && c != '\t')
+      html_content_.push_back(c);
+  }
 
+  // Navigate to the test html content.
+  ASSERT_NO_FATAL_FAILURE(ui_test_utils::NavigateToURL(
+      browser(), embedded_test_server()->GetURL("/test.html")));
+
+  // Dump the form fields (and their inferred field types).
   content::WebContents* web_contents =
       browser()->tab_strip_model()->GetActiveWebContents();
   ContentAutofillDriver* autofill_driver =
@@ -158,20 +198,13 @@ void FormStructureBrowserTest::GenerateResults(const std::string& input,
   *output = FormStructuresToString(forms);
 }
 
-std::string FormStructureBrowserTest::FormStructuresToString(
-    const std::vector<std::unique_ptr<FormStructure>>& forms) {
-  std::string forms_string;
-  for (const auto& form : forms) {
-    for (const auto& field : *form) {
-      forms_string += field->Type().ToString();
-      forms_string += " | " + base::UTF16ToUTF8(field->name);
-      forms_string += " | " + base::UTF16ToUTF8(field->label);
-      forms_string += " | " + base::UTF16ToUTF8(field->value);
-      forms_string += " | " + field->section();
-      forms_string += "\n";
-    }
-  }
-  return forms_string;
+std::unique_ptr<HttpResponse> FormStructureBrowserTest::HandleRequest(
+    const HttpRequest& request) {
+  auto response = std::make_unique<BasicHttpResponse>();
+  response->set_code(net::HTTP_OK);
+  response->set_content(html_content_);
+  response->set_content_type("text/html; charset=utf-8");
+  return std::move(response);
 }
 
 IN_PROC_BROWSER_TEST_P(FormStructureBrowserTest, DataDrivenHeuristics) {
